# libatbus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
doc/: README.md  TODO.md
include/: atbus_connection.h  atbus_endpoint.h  atbus_msg_handler.h  atbus_node.h  include.macro.cmake  libatbus.h
include/detail/: buffer.h  crc32.h  crc64.h  libatbus_adapter_libuv.h  libatbus_channel_export.h  libatbus_channel_types.h  libatbus_config.h  libatbus_error.h  libatbus_protocol.h
include/detail/std/: thread.h
project/cmake/: CompilerOption.cmake  ProjectBuildOption.cmake
project/cmake/modules/: EchoWithColor.cmake  FindConfigurePackage.cmake  FindLibuv.cmake  RunCCode.cmake  RunCXXCode.cmake
protocol/: atbus_proto.fbs  protocol.macro.cmake
protocol/proto/: atbus_proto_generated.h
sample/: CMakeLists.txt  sample.macro.cmake
src/: .channel_mem.cpp.swp  CMakeLists.txt  atbus_connection.cpp  atbus_endpoint.cpp  atbus_msg_handler.cpp  atbus_node.cpp  channel_export.h  channel_io_stream.cpp  channel_mem.cpp  channel_shm.cpp  channel_utility.cpp  libatbus.macro.cmake
src/detail/: buffer.cpp  crc32.cpp  crc64.cpp
test/: CMakeLists.txt
test/app/: main.cpp
test/case/: atbus_endpoint_test.cpp  atbus_node_msg_test.cpp  atbus_node_nodesync_test.cpp  atbus_node_reg_test.cpp  atbus_node_relationship_test.cpp  atbus_node_test.cpp  buffer_test.cpp  channel_io_stream_tcp_test.cpp  channel_io_stream_test.cpp  channel_io_stream_unix_test.cpp  channel_mem_test.cpp
test/frame/: test_case_base.cpp  test_case_base.h  test_macros.h  test_manager.cpp  test_manager.h
tools/: CMakeLists.txt  benchmark_io_stream_channel_recv.cpp  benchmark_io_stream_channel_send.cpp  benchmark_shm_channel_recv.cpp  benchmark_shm_channel_send.cpp  tools.macro.cmake
tools/script/: cppcheck.sh  startup_benchmark_io_stream.sh  valgrind_memcheck.sh
